--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                     <ul>
                         <li id="logo" class="normal">
                             <div>
-                                <a href="/"> <img src="public/images/logomain.png"> </a>
+                                <a href="/"> <img src="public/images/logomain.svg"> </a>
                             </div>
                         </li>
                         <li class="squares">
